# paradigms

./: .gitignore  README.md
Assembly/: .gitignore  atomic.asm  bounds.asm  fib.asm  jat.asm  misc.asm
C/: EiSSco.c  EiSsco.c  generic.c  generic.h  macro.c  main.c  queens.c  stack.c  stack.h
C++/: .gitignore  array_stack.cpp  array_stack.hpp  main.cpp  stack.cpp  stack.hpp  stack.ipp  swap.cpp
C++/cxx/: CMakeLists.txt  README.md  algorithm.hpp  client.cpp  inheritance.cpp  library.hpp  polymorphism.cpp  range_iterator.cpp  renderer.cpp  renderer.h  unique_ptr.hpp
C++/cxx/lesson5/: bla.cpp  input.txt  io.cpp  person.cpp  person.hpp
C++/cxx/lesson7/: CMakeLists.txt  destructor.cpp  main.cpp  renderer.h  unique_ptr.hpp
C++/cxx/lesson8/: main.cpp  point.h  refs.cpp  renderer.cpp
CommonLisp/: fun.lisp  list.lisp  struct.lisp
F#/: active.fsx  async.fsx  dawoc.fsx  exceptions.fsx  flow.fsx  fun.fsx  lazy.fsx  modsim.fsx  rbtree.fsx  types.fsx
Forth/: roman.4th
Haskell/: Matrix.hs  Wolkenkratzer.hs  basic.hs  list.hs  matrix.hs  monad.hs  types.hs
ILP/: campaign.simplex  diet.simplex  gas.lp  test.lp
Java/: sorted.csv  sorted.ods
Lua/: basic.lua  coroutines.lua  maze.lua  objects.lua
ML/: active.fsx  dawoc.fsx
Octave/: .gitignore  ChapmanKolmogorov.m  fibonacci.m
Prolog/: dynamic.pl  family.pl  junina.pl  liset.pl  math.pl  sicp.pl
Python/: ChangRoberts.py  Tx4.py  corrupt.txt  csv2txt.py  dp.py  election.txt  simplehttp.py
SQL/: emp.sql  hotels.sql  space.sql  transact.sql
Scheme/: .gitignore  README.md  SICP.md  amb.scm  array.scm  basic.scm  (+31 more)
(+233 files in other folders)
